# lds-text-generator

./: .gitattributes  .gitignore  README.md  pyproject.toml  setup.bat
.github/workflows/: ci.yml
src/lds/: __init__.py  cli.py  constants.py  workbook.py
src/lds/contracts/: __init__.py  overlap.py
src/lds/engine/: __init__.py  classify.py  condense.py  ingest.py  models.py  parse.py  parser_interface.py  render.py  validate.py
src/lds/engine/reference/: __init__.py  abbreviations.py  land_districts.py
src/lds/engine/reference/data/: land_districts.json
src/lds/llm/: __init__.py  ollama_parser.py
src/lds/spatial/: __init__.py  db.py  features.py  geometry_input.py  overlay.py  views.py
src/lds/webapp/: __init__.py  app.py
tests/: conftest.py  test_architecture.py  test_classify.py  test_condense.py  test_contracts.py  test_engine_golden.py  test_geometry_input.py  test_parse.py  test_reference.py  test_spatial_db.py  test_spatial_logic.py  test_validate.py
tests/fixtures/descriptions/: dl526s_single_district.json  south_forge_mountain_vicinity.json
tests/fixtures/descriptions/core/: .gitkeep
tests/fixtures/descriptions/stretch/: .gitkeep
tests/fixtures/discovery/: Query_2_result.csv  Query_4_result.csv  RANKED_202606181331.csv  README.md  batch_results.docx  complex_shape.xlsx  multi_shape.xlsx  threshold_calibration_calib2.csv  threshold_calibration_calib2_perparcel.csv
tests/fixtures/overlays/: multi_district.json  single_district.json  with_pid_gap.json  with_unsurveyed_remainder.json
tools/: capture_fixtures.py  export_land_districts.py  reconstruct_overlaps.py
