[project]
name = "lds-generator"
version = "0.1.0"
description = "Legal Description Schedule generation for BC Land Act Crown land tenures"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    # contract
    "pydantic>=2.6",
    # spatial stage
    "oracledb>=2.0",        # thin mode (no Instant Client)
    "geopandas>=0.14",      # geometry I/O, validate/repair, reproject, dissolve
    "shapely>=2.0",
    "pyproj>=3.6",
    "fiona>=1.9",           # format reading (shp/gdb/kml/geojson)
    # review UI (Phase 6). Pinned to one major version so the UI is built and
    # tested against a known Dash; uv.lock pins the exact version.
    "dash>=4,<5",
    "flask>=3.0",
    # exports / data
    "openpyxl>=3.1",        # spreadsheet export of the structured overlap
    "pandas>=2.2",
]

[project.optional-dependencies]
# Optional model fallback (Phase 7). Opt-in; not installed by default.
# The Ollama runtime and model weights are NOT Python packages and live outside
# the tool folder (see docs/background.md / docs/PROJECT_PLAN.md section 2.6a).
llm = [
    "ollama>=0.1",
]

# Dev tools live in a dependency group (not an extra) so a plain `uv sync`
# installs them — the quickstart is `uv sync && uv run pytest -q`.
[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "mypy>=1.9",
]

[project.scripts]
lds = "lds.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lds"]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
markers = [
    "bcgw: integration tests that require a live BCGW connection (skipped without credentials)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
packages = ["lds"]
mypy_path = "src"
ignore_missing_imports = true
